qbittorrent/flood-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flood
  namespace: qbittorrent
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.129
  selector:
    app: flood
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
  namespace: qbittorrent
  labels:
    app: flood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flood
  template:
    metadata:
      labels:
        app: flood
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      volumes:
        - name: flooddata-vol
          persistentVolumeClaim:
            claimName: flood-local-pvc
        - name: floodconfig-vol
          persistentVolumeClaim:
            claimName: flood-config-local-pvc
      containers:
      - name: flood
        image: jesec/flood:4.8.2
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 3000

        volumeMounts:
          - mountPath: /downloads
            name: flooddata-vol
          - mountPath: /config
            name: floodconfig-vol
