qbittorrent/flood-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood
  namespace: qbittorrent
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - p2p.sushiraccoon.com
    secretName: flood-tls
  rules:
  - host: p2p.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flood
            port:
              number: 80
