qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: torrent
spec:
  defaultBackend:
    service:
      name: qbittorrent
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - p2p
